--- a/css/style.css
+++ b/css/style.css
@@ -532,6 +532,21 @@ section .avi {
   margin: 2em 0;
 }
 
+/*---------------------------------------  Whatsapp */
+
+#boton-flotante {
+  position: fixed;
+  bottom: 50%;
+  right: 0;
+  transform: translateY(50%);
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
 /*---------------------------------------  Wrapper */
 .wrapper {
   margin: 6.5em 0;
