--- a/css/style.css
+++ b/css/style.css
@@ -841,10 +841,7 @@ section .avi {
   }
 
   #header img {
-    max-width: 200px;
-    /* Establece el ancho máximo absoluto del logo */
-    height: auto;
-    /* Para mantener la proporción de aspecto */
+    max-width: 35%;
     display: block;
   }
 
@@ -913,7 +910,7 @@ section .avi {
 @media screen and (max-width: 480px) {
 
 
-
+  
   .tipos {
     display: block;
   }
@@ -1001,7 +998,7 @@ section .avi {
   }
 
   /*---------------------------------------  Whatsapp */
-
+ 
   #botonFlotante {
     bottom: 65%;
     border: none;
