--- a/css/style.css
+++ b/css/style.css
@@ -501,11 +501,14 @@ button,
   margin-top: -1.75em;
   position: relative;
   width: calc(100% + 3.5em);
+  height: 210px;
 }
 
 .tipos article .image img {
   border-radius: 5px 5px 0 0;
   width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ajuste para cubrir manteniendo la relación de aspecto */
 }
 
 
