--- a/css/style.css
+++ b/css/style.css
@@ -695,6 +695,21 @@ section .avi {
   transform: scale(1);
 }
 
+/*---------------------------------- MODAL FORM */
+
+.modalForm {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgb(255, 255, 255);
+  color: #4176a2;
+  padding: 20px;
+  border-radius: 10px;
+  z-index: 1000;
+}
+
 /*---------------------------------- contacto */
 
 .style3 {
